<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="100"

        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="Ваша кликуха" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="0"
        android:contentDescription="@string/_1"
        app:srcCompat="@drawable/eda" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Выбрать товар"
        android:textSize="15sp"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0"
        android:contentDescription="@string/_1"
        android:minWidth="48sp"
        android:minHeight="48sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_weight="0"
        android:contentDescription="@string/_2"
        android:layout_marginStart="108dp"
        app:srcCompat="@drawable/pizza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="Стоимость товара"
            android:translationX="9dp"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="Количество"
            android:translationX="-1dp"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="-9dp"

            android:layout_weight="0.5"
            android:text="0 рублей"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentStart = "true"
            android:layout_weight="0"
            android:text="@string/minus"
            android:onClick="otnyat"
            android:textSize="24sp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart = "true"
            android:layout_marginStart="18dp"
            android:layout_weight="4"
            android:text="@string/zero"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="55dp"
            android:layout_height="54dp"
            android:layout_marginRight="32dp"
            android:layout_weight="0"
            android:onClick="priplusovat"
            android:text="@string/plus"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:onClick="AddToCart"
        android:text="Добавить в корзину"
        android:translationY="5dp" />

    <TextView
        android:id="@+id/Obshaya_stoimost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textSize="18sp"
        android:text="Общая стоимость заказа: 0 рублей" />
</LinearLayout>
